--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Name - Personal Website</title>
+  <title>Tim Schwerdhelm - Personal Website</title>
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
 <div class="container">
-  <h1>Your Name</h1>
+  <h1>Tim Schwerdhelm</h1>
   <p>Welcome to my personal website!</p>
-  <p>I'm a [Your Profession/Passion]. Here, you'll find information about me, my projects, and how to get in touch.</p>
+  <p>Moin, ich bin Tim. Ich bin 21 Jahre alt und studiere Software Engineering im Bachelor. Neben meinem Studium fliege ich Segel- und Motorflugzuge und mache viel Sport.</p>
   <p>Connect with me on:</p>
   <div>
-    <a href="#">LinkedIn</a> |
+    <a href="#">WeGlide</a> |
     <a href="#">Twitter</a> |
     <a href="#">GitHub</a>
   </div>
