--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
 <div class="container">
   <h1>Tim Schwerdhelm</h1>
-  <p>Welcome to my personal website!</p>
-  <p>Moin, ich bin Tim. Ich bin 21 Jahre alt und studiere Software Engineering im Bachelor. Neben meinem Studium fliege ich Segel- und Motorflugzuge und mache viel Sport.</p>
+  <p>Moin!</p>
+  <p>Moin! Ich bin Tim, aktuell im Bachelor-Studium für Software Engineering.
+  Abseits der digitalen Welt bin ich häufig im Luftraum über Deutschland unterwegs, sei es in Motor- oder Segelflugzeugen.
+  Sportlich bin ich vielseitig interessiert und engagiere mich besonders in Volleyball, Turnen und Calisthenics.</p>
   <p>Connect with me on:</p>
   <div>
-    <a href="#">WeGlide</a> |
-    <a href="#">Twitter</a> |
-    <a href="#">GitHub</a>
+    <a href="https://www.weglide.org/user/8701">WeGlide</a> |
   </div>
 </div>
 
