--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <div class="container">
   <h1>Tim Schwerdhelm</h1>
   <p>Moin!</p>
-  <p>Moin! Ich bin Tim, aktuell im Bachelor-Studium für Software Engineering.
+  <p>Ich bin Tim, aktuell im Bachelor-Studium für Software Engineering.
   Abseits der digitalen Welt bin ich häufig im Luftraum über Deutschland unterwegs, sei es in Motor- oder Segelflugzeugen.
   Sportlich bin ich vielseitig interessiert und engagiere mich besonders in Volleyball, Turnen und Calisthenics.</p>
   <p>Connect with me on:</p>
   <div>
-    <a href="https://www.weglide.org/user/8701">WeGlide</a> |
+    <a href="https://www.weglide.org/user/8701">WeGlide</a>
   </div>
 </div>
 
