--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
 
 <div class="container">
-  <h1>Tim Schwerdhelm</h1>
+  <h1 style="text-align: justify;">Tim Schwerdhelm</h1>
   <p>Moin!</p>
   <p>Ich bin Tim, aktuell im Bachelor-Studium für Software Engineering.
   Abseits der digitalen Welt bin ich häufig im Luftraum über Deutschland unterwegs, sei es in Motor- oder Segelflugzeugen.
   Sportlich bin ich vielseitig interessiert und engagiere mich besonders in Volleyball, Turnen und Calisthenics.</p>
   <p>Connect with me on:</p>
-  <div>
+  <div style="text-align: justify;">
     <a href="https://www.weglide.org/user/8701">WeGlide</a>
   </div>
 </div>
